css corrections for mobile image shift

--- a/docroot/sites/all/themes/divine2013/sass/nodes.scss
+++ b/docroot/sites/all/themes/divine2013/sass/nodes.scss
@@ -1621,7 +1621,7 @@ display:none !important;
 			#softspot-chocolate-mobile {
 				display:block;
 				float:right;
-				margin-right:-5em;}
+				margin:20px 0 0;}
 			p {
 				clear:both;}
 		}
